--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,7 +16,8 @@ services:
   
   homeassistant:
     container_name: home-assistant
-    image: homeassistant/raspberrypi3-homeassistant:0.118.4
+    #image: homeassistant/raspberrypi3-homeassistant:0.118.4    
+    image: homeassistant/raspberrypi3-homeassistant:2021.4.6
     restart: unless-stopped
     logging:
       driver: journald
