--- a/hass-config/custom_components/variable/manifest.json
+++ b/hass-config/custom_components/variable/manifest.json
@@ -1,10 +1,14 @@
 {
     "domain": "variable",
     "name": "variable",
-    "documentation": "https://github.com/rogro82/hass-variables",
+    "documentation": "https://github.com/Wibias/hass-variables",
+    "issue_tracker": "https://github.com/Wibias/hass-variables/issues",
     "requirements": [],
     "dependencies": [],
     "codeowners": [
-        "@rogro82"
-    ]
+        "@rogro82",
+        "@wibias"
+    ],
+    "iot_class": "calculated",
+    "version": "2.1.0"
 }
